# swaedit

./: .classpath  .gitignore  .project  AUDIT.md  CMakeLists.txt  Dockerfile.linux-builder  LICENSE  PLAN.md  STATIC_LINUX_PLAN.md  fonts.conf  mvn-install.sh  pom.xml  swaedit.sh
.github/workflows/: build.yml  docker-builder.yml
data/: areaflags.xml  attackflags.xml  defenseflags.xml  exitflags.xml  exits.xml  highlighter.xml  itemextraflags.xml  itemtypes.xml  itemwearflags.xml  languages.xml  lastupdate.xml  mobileactflags.xml  mobileaffectedflags.xml  mobilespecfunctions.xml  planets.xml  positions.xml  progtypes.xml  races.xml  renumberWarning.html  repairtypes.xml  resetsinfo.xml  resistflags.xml  roomflags.xml  roomsectortypes.xml  shopflags.xml  usmessages.xml  xflags.xml
images/: blue.xcf  green.xcf  red.xcf
schemas/: area.xjb  area.xsd  exits.xsd  flags.xsd  highlighter.xsd  itemtypes.xsd  lastupdate.xsd  names.xsd  progtypes.xsd  resets.xsd  stringtypes.xsd  types.xsd  usmessages.xsd  usprotocol.xsd
scripts/: build-static-deps.sh  build-swaedit-static.sh  mvn-install-jogl.sh  mvn-install-qtjambi.sh
src/: main.cpp
src/core/: Renumberer.cpp  Renumberer.h  XmlIO.cpp  XmlIO.h
src/gui/: BalloonWidget.cpp  BalloonWidget.h  ExitEventFilter.cpp  ExitEventFilter.h  ExtraDescWidget.cpp  ExtraDescWidget.h  ExtraDescWidget.ui  FlagsWidget.cpp  FlagsWidget.h  FlagsWidget.ui  MainWindow.cpp  MainWindow.h  MessagesWidget.ui  MobileSpecialsWidget.cpp  MobileSpecialsWidget.h  MobileSpecialsWidget.ui  NewAreaWidget.cpp  NewAreaWidget.h  NewAreaWidget.ui  NewExitWidget.cpp  NewExitWidget.h  NewExitWidget.ui  NewResetWidget.cpp  NewResetWidget.h  NewResetWidget.ui  NewShopWidget.cpp  NewShopWidget.h  NewShopWidget.ui  ProgramsHighlighter.cpp  ProgramsHighlighter.h  ProgramsWidget.cpp  ProgramsWidget.h  ProgramsWidget.ui  RenumberWarningsWidget.cpp  RenumberWarningsWidget.h  RenumberWarningsWidget.ui  RenumberWidget.cpp  RenumberWidget.h  RenumberWidget.ui  ResetFlagsWidget.cpp  (+14 more)
src/main/assembly/: bin-all.xml  bin-linux32.xml  bin-linux64.xml  bin-main.xml  bin-unix.xml  bin-win.xml  bin-win32.xml  bin-win64.xml
src/main/cpp/launcher/swaedit/: swaedit.sln
src/main/cpp/launcher/swaedit/swaedit/: Resource.h  swaedit.cpp  swaedit.h  swaedit.rc  swaedit.vcproj
src/main/scripts/: swaedit.bat  swaedit.sh
src/map/: ExitWrapper.cpp  ExitWrapper.h  MapRoom.cpp  MapRoom.h  MapWidget.cpp  MapWidget.h  Mapper.cpp  Mapper.h  RoomCoords.cpp  RoomCoords.h  RoomSpread.h
src/model/: Area.h  ConfigData.h
src/pl/swmud/ns/swaedit/core/: FileServer.java  JAXBOperations.java  Renumberer.java
src/pl/swmud/ns/swaedit/exits/: Exit.java  ObjectFactory.java
src/pl/swmud/ns/swaedit/flags/: Flag.java  ObjectFactory.java  package-info.java
src/pl/swmud/ns/swaedit/gui/: ExtraDescWidget.jui  MessagesWidget.java  NewResetWidget.jui  NewShopWidget.java  NewShopWidget.jui  ProgramsHighlighter.java  ProgramsWidget.java  RenumberWarningsWidget.java  RenumberWarningsWidget.jui  RenumberWidget.java  RenumberWidget.jui  ResetFlagsWidget.java  ResetVnumEventFilter.java  SWAEdit.java  SWAEdit.jui  ValueFlagsWidget.java  ValueFlagsWidget.jui  VnumQuestionWidget.java  VnumQuestionWidget.jui  tmp_SWAEdit.jui
(+109 files in other folders)
